--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,9 +6,9 @@
 # Appearance
 appearance:
 theme: minimal
-day_night: false
-font: " "
-font_size: "M"
+day_night: true
+font: minimal
+font_size: "L"
 
 
 # SEO
