--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -17,7 +17,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'The highly-customizable Hugo Academic theme powered by Hugo Blox Builder. Easily create your personal academic website.'
+    description: ''
     twitter: 'atul_anurag'
   analytics:
     google_analytics: ''
