--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -6,7 +6,7 @@
 # Website name
 title: Atul Anurag
 # Website URL
-baseURL: 'https://atulanurag.com/'
+baseURL: 'https://www.atulanurag.com/'
 
 ############################
 ## LANGUAGE
