--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -3,12 +3,11 @@
 # Documentation: https://docs.hugoblox.com/
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-# Appearance
 appearance:
-theme: "forest"
-day_night: true
-font: "minimal"
-font_size: "L"
+  theme_day: minimal
+  theme_night: minimal
+  font: minimal
+  font_size: M
 
 
 # SEO
