--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -4,8 +4,10 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 appearance:
-  mode: system
-  color: emerald
+  theme_day: minimal
+  theme_night: minimal
+  font: minimal
+  font_size: M
 
 
 # SEO
