--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -14,7 +14,7 @@ main:
     url: events/
     weight: 12
   - name: Blog
-    url: post/
+    url: '#post'
     weight: 20
   - name: Teaching
     url: teaching/
