--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -4,10 +4,8 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 appearance:
-  theme_day: minimal
-  theme_night: minimal
-  font: minimal
-  font_size: L
+  mode: light
+  color: blue
 
 
 # SEO
