--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,9 +13,9 @@ main:
   - name: Talks
     url: events/
     weight: 40
-  - name: Blog
-    url: post/
-    weight: 20
+  #- name: Blog
+  #  url: post/
+  #  weight: 20
   - name: Teaching
     url: teaching/
     weight: 20
