--- a/themes/theme-academic-cv/theme.toml
+++ b/themes/theme-academic-cv/theme.toml
@@ -11,7 +11,6 @@ tags = ["widgets",
         "clean",
         "personal",
         "company",
-        "blog",
         "minimal",
         "light",
         "dark",
@@ -36,7 +35,7 @@ tags = ["widgets",
         "slide"
         ]
 features = ["page builder", "widgets", "themes", "search", "research publication system", "filterable portfolio",
-            "blog", "create courses", "talks", "events", "slides", "gallery", "contact form"]
+             "create courses", "talks", "events", "slides", "gallery", "contact form"]
 
 [author]
   name = "George Cushen"
