--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -68,7 +68,7 @@ features:
     branch: main
   avatar:
     gravatar: false
-    shape: square
+    shape: circle
   comment:
     provider: ''
     disqus:
