--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -97,9 +97,9 @@ sitemap:
 
 params:
   fonts:
-    text: "Poppins"
-    heading: "Montserrat"
-    monospace: "Source Code Pro"
+    text: "-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"
+    heading: "-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"
+    monospace: "SFMono-Regular, Consolas, 'Liberation Mono', Menlo, Courier, monospace"
 
   colors:
     primary: "#1E90FF"
