--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -32,12 +32,10 @@ marketing:
 header:
   navbar:
     enable: true
-    align: l
-    show_logo: true
-    show_language: false
-    show_day_night: true
+    blox: "navbar"
+    fixed_to_top: true
     show_search: true
-    highlight_active_link: true
+    show_theme_chooser: true
     logo:
       text: "Dr. Atul Anurag"
 
